--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <div id = "case">
-        <div id = "me"> <h1>LE POTTIER MATHIAS</h1> </div>
+        <div id = "me"> <p>LE POTTIER MATHIAS</p> </div>
 
         <div id = "links">
             <a href="about.html">A propos de moi</a>
