--- a/index.html
+++ b/index.html
@@ -4,19 +4,190 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Index</title>
+    <title>Mathias Le Pottier</title>
 </head>
+
+
+<a href="assets/autre/Cv_Mathias.pdf" download="Mathias_LePottier_CV.pdf" class="btn-flottant">CV</a>
 <body>
+    
+    <div id = "scroll-progress"></div>
 
-    <div id = "case">
-        <div id = "me"> <p>LE POTTIER MATHIAS</p> </div>
 
-        <div id = "links">
-            <a href="about.html">A propos de moi</a>
-            <a href="competence.html">Compétences</a>
-            <a href="benevolat.html">Bénévolat</a>
+    <section id = "intro">
+        <div id = "case">
+            <img src="assets/img/Mathias.png" alt="Photo de profil" class="photo-profil">
+            <div class = "firstTitre"> <p>LE POTTIER MATHIAS</p> </div>
+
+            <div id = "links">
+                <a href="#aPropo">A propos de moi</a>
+                <a href="#competences">Compétences</a>
+                <a href="#experience">Expériences</a>
+                <a href="#benevolat">Bénévolat</a>
+                <a href="#loisir">Loisir</a>
+            </div>
         </div>
-    </div>
+    </section>
 
+
+    <section id = "aPropo">
+        <div class = "titre"> <p>A PROPOS DE MOI</p> </div>
+        <div id = "wrapPrimaire1">
+            <div class="wrap1">
+                <p>
+                    Je m’appelle Mathias Le Pottier, étudiant ingénieur en informatique et réseaux, spécialisé en intelligence artificielle, à l’ESAIP 
+                    (Angers). Curieux et passionné par les nouvelles technologies, je cherche à développer mes compétences techniques et humaines à travers 
+                    des projets concrets et collaboratifs.
+                </p>
+            </div>
+            <div class="wrap1">
+                <p>
+                    Mon parcours m’a permis d’acquérir une solide base en programmation ainsi qu’en 
+                    modélisation UML et en gestion de projet. J’accorde une grande importance à la rigueur, à l’organisation et à l’adaptabilité, des 
+                    qualités que j’ai pu renforcer lors de mes expériences professionnelles, notamment à travers la refonte de sites web, la collaboration 
+                    avec des clients et des missions en grande distribution.
+                </p>
+            </div>
+            <div class="wrap1">
+                <p>
+                    En parallèle, je m’investis dans l’association Innov’Lab, où je participe à des projets autour de la robotique et de l’impression 3D, 
+                    et j’ai contribué à la création d’un site web pédagogique sur la cybersécurité. Ces expériences nourrissent mon envie d’allier innovation 
+                    technologique et utilité concrète.
+                </p>
+            </div>
+        </div>
+
+    </section>
+
+
+
+    <section id = "competences">
+
+
+        <div class = "titre"> <p>MES COMPETENCES</p> </div>
+        <div class = "wrapPrimaire2-right">
+            <div class = "competence-right">Programmation</div>
+            <div id="text-competence-right"><p>C++, Java, Python, HTML, CSS, Javascript, SQL</p></div>
+        </div>
+
+
+        <div class = "wrapPrimaire2-left">
+            <div id="text-competence-left"><p>Création de diagramme UML</p></div>
+            <div class = "competence-left">UML</div>
+        </div>
+
+
+        <div class = "wrapPrimaire2-right">
+            <div class = "competence-right">Office 365</div>
+            <div id="text-competence-right"><p>Maitrise de la suite office 365 (Word, Excel, PowerPoint)</p> </div>
+        </div>
+
+
+        <div class = "wrapPrimaire2-left">
+            <div id="text-competence-left"><p>Réalisation de plusieurs projet en groupe</p></div>
+            <div class = "competence-left">Travail en équipe</div>
+        </div>
+
+
+        <div class = "wrapPrimaire2-right">
+            <div class = "competence-right">Gestion de projet</div>
+            <div id="text-competence-right"><p>Utilisation de la méthode agile dans divers projets</p></div>
+        </div>
+
+
+        <div class = "wrapPrimaire2-left">
+            <div id="text-competence-left"><p>Polyvalent, flexible, autonome, rigoureux, organisé, réactif</p></div>
+            <div class = "competence-left">Comportementales</div>
+        </div>
+
+    </section>
+
+
+    <section id = "experience">
+        <div class = "titre"> <p>MES EXPERIENCES</p> </div>
+
+        <div class = "wrapPrimaire3">
+            <div class = "wrapPrimaire4">
+                <div class="wrap21">Mise en rayon - COOPERATIVE U</div>
+                <div class="wrap22">
+                    <p>Réalisation d'un emploi étudiant à Hyper U</p>
+                    <ul>
+                        <li>Mise en rayon : Autonomie, Rigueur</li>
+                        <li>Service client : Gestion de situation varié, S’adapter</li>
+                        <li>Audit : Rigueur, Patience</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class = "wrapPrimaire4">
+                <div class="wrap21">Refonte d'un site web - Predell Service</div>
+                <div class="wrap22">
+                    <p>Réalisation d’un stage ouvrier chez Predell Services. Compétences aquises :</p>
+                    <ul>
+                        <li>Le respect d’un cahier des charges</li>
+                        <li>Travailler avec Wordpress</li>
+                        <li>Ecoute des besoins clients</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class = "wrapPrimaire4">
+                <div class="wrap21">Observation et soudure - Bodet</div>
+                <div class="wrap22">Competences acquises</div>
+            </div>
+
+            <div class = "wrapPrimaire4">
+                <div class="wrap21">Observation et soudure - Bodet</div>
+                <div class="wrap22">Competences acquises</div>
+            </div>
+
+            <div class = "wrapPrimaire4">
+                <div class="wrap21">Observation et soudure - Bodet</div>
+                <div class="wrap22">Competences acquises</div>
+            </div>
+
+            <div class = "wrapPrimaire4">
+                <div class="wrap21">Observation et soudure - Bodet</div>
+                <div class="wrap22">Competences acquises</div>
+            </div>
+
+            <div class = "wrapPrimaire4">
+                <div class="wrap21">Observation et soudure - Bodet</div>
+                <div class="wrap22">Competences acquises</div>
+            </div>
+
+            <div class = "wrapPrimaire4">
+                <div class="wrap21">Observation et soudure - Bodet</div>
+                <div class="wrap22">Competences acquises</div>
+            </div>
+
+            <div class = "wrapPrimaire4">
+                <div class="wrap21">Observation et soudure - Bodet</div>
+                <div class="wrap22">Competences acquises</div>
+            </div>
+        </div>
+
+        <div id="experience-nav">
+            <button id="prev-experience">← Précédent</button>
+            <button id="next-experience">Suivant →</button>
+        </div>
+
+
+    </section>
+
+
+
+    <section id = "benevolat">
+        <div class = "titre"> <p>MES BENEVOLATS</div></p> </div>
+    </section>
+
+
+    
+    <section id = "loisir">
+        <div class = "titre"> <p>MES LOISIRS</p> </div>
+    </section>
+
+    <script src="assets/js/scroll-bar.js"></script>
+    <script src="assets/js/experience-scroll.js"></script>
 </body>
 </html>
