--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 
             <div id = "links">
                 <a href="#aPropo">A propos de moi</a>
+                <a href="#formation">Mes formations</a>
                 <a href="#competences">Compétences</a>
                 <a href="#experience">Expériences</a>
                 <a href="#benevolat">Bénévolat</a>
-                <a href="#loisir">Loisir</a>
             </div>
         </div>
     </section>
@@ -42,21 +42,63 @@
             </div>
             <div class="wrap1">
                 <p>
-                    Mon parcours m’a permis d’acquérir une solide base en programmation ainsi qu’en 
-                    modélisation UML et en gestion de projet. J’accorde une grande importance à la rigueur, à l’organisation et à l’adaptabilité, des 
-                    qualités que j’ai pu renforcer lors de mes expériences professionnelles, notamment à travers la refonte de sites web, la collaboration 
-                    avec des clients et des missions en grande distribution.
-                </p>
-            </div>
-            <div class="wrap1">
-                <p>
                     En parallèle, je m’investis dans l’association Innov’Lab, où je participe à des projets autour de la robotique et de l’impression 3D, 
                     et j’ai contribué à la création d’un site web pédagogique sur la cybersécurité. Ces expériences nourrissent mon envie d’allier innovation 
                     technologique et utilité concrète.
                 </p>
             </div>
+            <div class="wrap1">
+                <p>Mes valeurs :</p>
+                <ul>
+                    <li>Efficacité : J’atteins mes objectifs rapidement tout en assurant la qualité du travail.</li>
+                    <li>Synthétique : Je sais aller à l’essentiel et présenter les informations de manière claire</li>
+                    <li>Travail d'équipe : Je collabore facilement et valorise les échanges pour avancer ensemble. </li>
+                </ul>
+            </div>
         </div>
 
+    </section>
+
+    <section id="formation">
+        <div class="titre"><p>MA FORMATION</p></div>
+        
+        <div id="wrapFormation">
+            <div class="formation-card">
+                <div>
+                    <div class="formation-header">Cycle Ingénieur</div>
+                    <div class="formation-periode">2024 - 2027</div>
+                    <div class="formation-lieu">ESAIP - Angers (49) - France</div>
+                    <div class="formation-description">
+                        Formation d'ingénieur en informatique et réseaux, spécialité Intelligence Artificielle. 
+                        Développement de compétences techniques avancées en programmation, gestion de projets et IA.
+                    </div>
+                </div>
+            </div>
+
+            <div class="formation-card">
+                <div>
+                    <div class="formation-header">Erasmus+</div>
+                    <div class="formation-periode">Janvier 2025 - Avril 2025</div>
+                    <div class="formation-lieu">SeAMK - Seinäjoki - Finlande</div>
+                    <div class="formation-description">
+                        Professional studies in technology. Expérience internationale permettant d'enrichir mes 
+                        compétences techniques tout en découvrant un environnement multiculturel.
+                    </div>
+                </div>
+            </div>
+
+            <div class="formation-card">
+                <div>
+                    <div class="formation-header">Cycle Préparatoire</div>
+                    <div class="formation-periode">2022 - 2024</div>
+                    <div class="formation-lieu">ESAIP - Angers (49) - France</div>
+                    <div class="formation-description">
+                        Deux années de cycle préparatoire intégré. Acquisition des fondamentaux scientifiques 
+                        et techniques nécessaires pour intégrer le cycle ingénieur.
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
 
@@ -65,11 +107,15 @@
 
 
         <div class = "titre"> <p>MES COMPETENCES</p> </div>
+
+        <p class = "titreComp">Competences techniques</p>
+
         <div class = "wrapPrimaire2-right">
             <div class = "competence-right">Programmation</div>
             <div id="text-competence-right"><p>C++, Java, Python, HTML, CSS, Javascript, SQL</p></div>
         </div>
 
+        <p class = "titreComp">Competences transversales</p>
 
         <div class = "wrapPrimaire2-left">
             <div id="text-competence-left"><p>Création de diagramme UML</p></div>
@@ -94,6 +140,7 @@
             <div id="text-competence-right"><p>Utilisation de la méthode agile dans divers projets</p></div>
         </div>
 
+        <p class = "titreComp">Competences Comportementales</p>
 
         <div class = "wrapPrimaire2-left">
             <div id="text-competence-left"><p>Polyvalent, flexible, autonome, rigoureux, organisé, réactif</p></div>
@@ -132,39 +179,40 @@
             </div>
 
             <div class = "wrapPrimaire4">
-                <div class="wrap21">Observation et soudure - Bodet</div>
-                <div class="wrap22">Competences acquises</div>
+                <div class="wrap21">Design4Green - ESAIP</div>
+                <div class="wrap22">
+                    <p>Challenge d'une durée de 48h non-stop. Création d'une application web en Flask ayant pour but de résumer un texte en une phrase 
+                    grâce à un modèle IA et ce de la manière la plus écologique possible </p>
+                    <ul>
+                        <li>Travail sous pression</li>
+                        <li>Travail sous fatigue extrème</li>
+                        <li>Adaptation aux contraintes clients</li>
+                        <li>Entrainement du modèle IA</li>
+                        <li>Développement écologique</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class = "wrapPrimaire4">
+                <div class="wrap21">PSIR - ESAIP</div>
+                <div class="wrap22">Projet scientifique d'introduction à la recherche : Sécurité des images dans les systèmes de vidéosurveillance intelligents</div>
+            </div>
+
+            <div class = "wrapPrimaire4">
+                <div class="wrap21">Activ'ESAIP - ESAIP</div>
+                <div class="wrap22">En recherche d'entreprise...</div>
             </div>
 
             <div class = "wrapPrimaire4">
                 <div class="wrap21">Observation et soudure - Bodet</div>
-                <div class="wrap22">Competences acquises</div>
+                <div class="wrap22">
+                    <p>Découverte du monde de l'entreprise</p>
+                    <ul>
+                        <li>Soudure</li>
+                    </ul>
+                </div>
             </div>
 
-            <div class = "wrapPrimaire4">
-                <div class="wrap21">Observation et soudure - Bodet</div>
-                <div class="wrap22">Competences acquises</div>
-            </div>
-
-            <div class = "wrapPrimaire4">
-                <div class="wrap21">Observation et soudure - Bodet</div>
-                <div class="wrap22">Competences acquises</div>
-            </div>
-
-            <div class = "wrapPrimaire4">
-                <div class="wrap21">Observation et soudure - Bodet</div>
-                <div class="wrap22">Competences acquises</div>
-            </div>
-
-            <div class = "wrapPrimaire4">
-                <div class="wrap21">Observation et soudure - Bodet</div>
-                <div class="wrap22">Competences acquises</div>
-            </div>
-
-            <div class = "wrapPrimaire4">
-                <div class="wrap21">Observation et soudure - Bodet</div>
-                <div class="wrap22">Competences acquises</div>
-            </div>
         </div>
 
         <div id="experience-nav">
@@ -172,22 +220,59 @@
             <button id="next-experience">Suivant →</button>
         </div>
 
-
     </section>
 
 
 
     <section id = "benevolat">
         <div class = "titre"> <p>MES BENEVOLATS</div></p> </div>
+
+        <div class="wrapBenevolat">
+            <div class="benevolat-card">
+                <div class="benevolat-header">Innov’Lab - ESAIP</div>
+                <div class="benevolat-body">
+                    <p>Trésorier</p>
+                    <ul>
+                        <li>Prise de responsabilités</li>
+                        <li>Création et envoie de facture</li>
+                        <li>Gestion des comptes</li>
+                        <li>Participation au réunion du bureau</li>
+                    </ul>
+                    <p>Participation à des projets étudiants autour de la robotique et de l’impression 3D.</p>
+                    <ul>
+                        <li>Travail d’équipe et créativité</li>
+                        <li>Conception de prototypes</li>
+                        <li>Apprentissage de nouvelles technologies</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="benevolat-card">
+                <div class="benevolat-header">Introduction à la cybersécurité</div>
+                <div class="benevolat-body">
+                    <p>Création d’un site web pédagogique pour introduire et débuter en cybersécurité.</p>
+                    <ul>
+                        <li>Communication et vulgarisation</li>
+                        <li>Travail autonome</li>
+                        <li>HTML / CSS / Javascript</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div id="benevolat-nav">
+            <button id="prev-benevolat">← Précédent</button>
+            <button id="next-benevolat">Suivant →</button>
+        </div>
     </section>
 
-
-    
-    <section id = "loisir">
-        <div class = "titre"> <p>MES LOISIRS</p> </div>
-    </section>
+    <footer> 
+        <p>Copyright @2025 - Le Pottier Mathias</p>
+    </footer>
 
     <script src="assets/js/scroll-bar.js"></script>
     <script src="assets/js/experience-scroll.js"></script>
+    <script src="assets/js/benevolat-scroll.js"></script>
+
 </body>
 </html>
