--- a/index.html
+++ b/index.html
@@ -151,16 +151,18 @@
 
 
     <section id = "experience">
-        <div class = "titre"> <p>MES EXPERIENCES</p> </div>
+    <div class = "titre"> <p>MES EXPERIENCES</p> </div>
 
-        <div class = "wrapPrimaire3">
+    <div class = "wrapPrimaire3">
+        <!-- NOUVEAU : Conteneur track pour gérer le défilement -->
+        <div class="experience-track">
             <div class = "wrapPrimaire4">
                 <div class="wrap21">Mise en rayon - COOPERATIVE U</div>
                 <div class="wrap22">
                     <p>Réalisation d'un emploi étudiant à Hyper U</p>
                     <ul>
                         <li>Mise en rayon : Autonomie, Rigueur</li>
-                        <li>Service client : Gestion de situation varié, S’adapter</li>
+                        <li>Service client : Gestion de situation variée, S'adapter</li>
                         <li>Audit : Rigueur, Patience</li>
                     </ul>
                 </div>
@@ -169,9 +171,9 @@
             <div class = "wrapPrimaire4">
                 <div class="wrap21">Refonte d'un site web - Predell Service</div>
                 <div class="wrap22">
-                    <p>Réalisation d’un stage ouvrier chez Predell Services. Compétences aquises :</p>
+                    <p>Réalisation d'un stage ouvrier chez Predell Services. Compétences aquises :</p>
                     <ul>
-                        <li>Le respect d’un cahier des charges</li>
+                        <li>Le respect d'un cahier des charges</li>
                         <li>Travailler avec Wordpress</li>
                         <li>Ecoute des besoins clients</li>
                     </ul>
@@ -212,15 +214,15 @@
                     </ul>
                 </div>
             </div>
-
         </div>
+    </div>
 
-        <div id="experience-nav">
-            <button id="prev-experience">← Précédent</button>
-            <button id="next-experience">Suivant →</button>
-        </div>
+    <div id="experience-nav">
+        <button id="prev-experience">← Précédent</button>
+        <button id="next-experience">Suivant →</button>
+    </div>
 
-    </section>
+</section>
 
 
 
