--- a/index.html
+++ b/index.html
@@ -108,29 +108,29 @@
 
         <div class = "titre"> <p>MES COMPETENCES</p> </div>
 
-        <p class = "titreComp">Competences techniques</p>
+        <p class = "titreComp">Compétences techniques</p>
 
         <div class = "wrapPrimaire2-right">
-            <div class = "competence-right">Programmation</div>
-            <div id="text-competence-right"><p>C++, Java, Python, HTML, CSS, Javascript, SQL</p></div>
+            <div class = "competence-right">C++, Java, Python, HTML, CSS, Javascript, SQL</div>
+            <div id="text-competence-right"><p>J'ai développé mes compétences dans divers langages de programmations lors de mes formations ainsi que lors de mes expériences professionnelles</p></div>
         </div>
 
-        <p class = "titreComp">Competences transversales</p>
+        <p class = "titreComp">Compétences transversales</p>
 
         <div class = "wrapPrimaire2-left">
-            <div id="text-competence-left"><p>Création de diagramme UML</p></div>
+            <div id="text-competence-left"><p>Lors de plusieurs projets scolaires j'ai pu réaliser de nombreux diagrammes UML, notamment des diagrammes de classes ou encore des diagrammes de séquences</p></div>
             <div class = "competence-left">UML</div>
         </div>
 
 
         <div class = "wrapPrimaire2-right">
             <div class = "competence-right">Office 365</div>
-            <div id="text-competence-right"><p>Maitrise de la suite office 365 (Word, Excel, PowerPoint)</p> </div>
+            <div id="text-competence-right"><p>je maitrise de nombreux outils de la suite office 365 comme Word, Excel ou encore PowerPoint</p> </div>
         </div>
 
 
         <div class = "wrapPrimaire2-left">
-            <div id="text-competence-left"><p>Réalisation de plusieurs projet en groupe</p></div>
+            <div id="text-competence-left"><p>Lors des nombreux projets que j'ai pu réaliser j'ai eu l'opportunité de travailler avec de nombreux groupes, tous différents</p></div>
             <div class = "competence-left">Travail en équipe</div>
         </div>
 
@@ -140,11 +140,11 @@
             <div id="text-competence-right"><p>Utilisation de la méthode agile dans divers projets</p></div>
         </div>
 
-        <p class = "titreComp">Competences Comportementales</p>
+        <p class = "titreComp">Compétences Comportementales</p>
 
         <div class = "wrapPrimaire2-left">
-            <div id="text-competence-left"><p>Polyvalent, flexible, autonome, rigoureux, organisé, réactif</p></div>
-            <div class = "competence-left">Comportementales</div>
+            <div id="text-competence-left"><p>Mes expériences scolaires, professionnelles et même personnelles m'ont permis d'avoir de nombreuses compétences comportementales importantes pour pouvoir vivre en société</p></div>
+            <div class = "competence-left">Polyvalent, flexible, autonome, rigoureux, organisé, réactif</div>
         </div>
 
     </section>
