--- a/index.html
+++ b/index.html
@@ -154,12 +154,11 @@
     <div class = "titre"> <p>MES EXPERIENCES</p> </div>
 
     <div class = "wrapPrimaire3">
-        <!-- NOUVEAU : Conteneur track pour gérer le défilement -->
         <div class="experience-track">
             <div class = "wrapPrimaire4">
-                <div class="wrap21">Mise en rayon - COOPERATIVE U</div>
+                <div class="wrap21">Mise en rayon - COOPERATIVE U - 2 mois</div>
                 <div class="wrap22">
-                    <p>Réalisation d'un emploi étudiant à Hyper U</p>
+                    <p>Réalisation d'un emploi étudiant à Hyper U en tant qu'employé polyvalent DPH. Durant ce stage je me suis occupé des stocks, du facing et de la gestion de la réserve des rayons qui m'étaient assignés</p>
                     <ul>
                         <li>Mise en rayon : Autonomie, Rigueur</li>
                         <li>Service client : Gestion de situation variée, S'adapter</li>
@@ -169,9 +168,9 @@
             </div>
 
             <div class = "wrapPrimaire4">
-                <div class="wrap21">Refonte d'un site web - Predell Service</div>
+                <div class="wrap21">Refonte d'un site web - Predell Service - 1 mois</div>
                 <div class="wrap22">
-                    <p>Réalisation d'un stage ouvrier chez Predell Services. Compétences aquises :</p>
+                    <p>Réalisation d'un stage ouvrier chez Predell Services durant lequel j'ai fais la refonte de leurs site web via Wordpress</p>
                     <ul>
                         <li>Le respect d'un cahier des charges</li>
                         <li>Travailler avec Wordpress</li>
@@ -181,7 +180,7 @@
             </div>
 
             <div class = "wrapPrimaire4">
-                <div class="wrap21">Design4Green - ESAIP</div>
+                <div class="wrap21">Design4Green - ESAIP - 2 jours</div>
                 <div class="wrap22">
                     <p>Challenge d'une durée de 48h non-stop. Création d'une application web en Flask ayant pour but de résumer un texte en une phrase 
                     grâce à un modèle IA et ce de la manière la plus écologique possible </p>
@@ -206,7 +205,7 @@
             </div>
 
             <div class = "wrapPrimaire4">
-                <div class="wrap21">Observation et soudure - Bodet</div>
+                <div class="wrap21">Observation et soudure - Bodet - 2 semaines</div>
                 <div class="wrap22">
                     <p>Découverte du monde de l'entreprise</p>
                     <ul>
