--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <title>Mathias Le Pottier</title>
+    <meta name="description" content="Je m’appelle Mathias Le Pottier, étudiant ingénieur en informatique et réseaux spécialisé en intelligence artificielle. Découvrez mes projet, compétences et expériences.">
+    <link rel="icon" type="image/png" href="assets/img/logo.png" />
+    <link rel="stylesheet" href="assets/css/style.scss">
+    <title>Mon Portfolio - Mathias Le Pottier</title>
 </head>
 
 
