--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Je m’appelle Mathias Le Pottier, étudiant ingénieur en informatique et réseaux spécialisé en intelligence artificielle. Découvrez mes projet, compétences et expériences.">
     <link rel="icon" type="image/png" href="assets/img/logo.png" />
-    <link rel="stylesheet" href="assets/css/style.scss">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Mon Portfolio - Mathias Le Pottier</title>
 </head>
 
